Adicionados testes parametrizados para os endpoints do ConversionController