@@ -1,12 +1,12 @@
 package com.mytconvert.datamanagement.controller.conversion;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -16,6 +16,7 @@ import com.mytconvert.datamanagement.entity.conversion.Conversion;
 import com.mytconvert.datamanagement.service.conversion.ConversionService;
 import com.mytconvert.datamanagement.utils.RequestValidator;
 import com.mytconvert.datamanagement.utils.ValidationUtils;
+import com.mytconvert.security.utils.JwtUtils;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -33,9 +34,9 @@ public class ConversionController {
     }
 
     @PostMapping("/createConversion")
-    public ResponseEntity<String> createConversion(@RequestBody Map<String, String> payload) {
+    public ResponseEntity<String> createConversion(@RequestBody Map<String, Object> payload) {
         
-        List<String> requiredFields = Arrays.asList("internal_file_name", "format", "length");
+        List<String> requiredFields = List.of("internal_file_name", "format", "length");
         RequestValidator.validateFieldsForMap(payload, requiredFields);
 
         String internalFileName = (String) payload.get("internal_file_name");
@@ -52,6 +53,30 @@ public class ConversionController {
         logger.info("Conversion created successfully with ID: {}", createdConversion.getId());
 
         return ResponseEntity.status(HttpStatus.CREATED)
-                .body("{\"message\": \"Nova conversao cadastrada\" \"" + createdConversion.getId() + "\"}");
+                .body("{\"message:"  + "Nova conversao cadastrada\", \"id\": \"" + createdConversion.getId() + "\"}");
+    }
+
+    @GetMapping("/listforadm")
+    public ResponseEntity<?> listForAdmin() {
+        if(!JwtUtils.getCurrentUser().get().getType().equals("ADMIN")) {
+            logger.error("Access denied: User is not an admin");
+            return ResponseEntity.status(HttpStatus.FORBIDDEN)
+                    .body("{\"error\": \"Access denied: User is not an admin\"}");
+        }
+        List<Conversion> conversions = conversionService.getAllConversions();
+        return ResponseEntity.ok(conversions);
+    }
+
+    @GetMapping("/listforuser")
+    public ResponseEntity<?> listForUser() {
+        if(JwtUtils.getCurrentUser().get().getType().equals("ADMIN") || JwtUtils.getCurrentUser().get().getType().equals("USER")) {
+            Long userId = JwtUtils.getCurrentUser().get().getId();
+            List<Conversion> conversions = conversionService.getConversionsByUserId(userId);
+            return ResponseEntity.ok(conversions);
+        } else {
+            logger.error("Access denied: User is not authorized");
+            return ResponseEntity.status(HttpStatus.FORBIDDEN)
+                    .body("{\"error\": \"Access denied: User is not authorized\"}");
+        }
     }
 }
